using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant
{
    // Input Action Constants
    public const string INPUT_ACTION_MOVING = "Move";
    public const string INPUT_ACTION_ATTACKING = "Attack";

    // Trigger Anim Constants
    public const string TRIGGER_RUN = "run";
    public const string TRIGGER_IDLE = "idle";
    public const string TRIGGER_ATTACK = "attack";
    public const string TRIGGER_SHOOT = "shoot";
    public const string TRIGGER_DEATH = "death";

}
